--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ yarn-error.log
 /.vscode
 
 /storage/installed
+/storage/framework/cache/data/*
 /storage/framework/sessions/*
 /storage/framework/views/*
 /storage/logs/laravel.log
